# hero

./: .env  .eslintrc.cjs  .eslintrc.json  .gitignore  Cargo.toml  README.md  biome.json  components.json  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js  test.http  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: checks.yaml  publish.yaml
app/: globals.css  layout.tsx  page.tsx
app/editor/: page.tsx
app/home/: page.tsx
app/locations/: page.tsx
app/settings/: layout.tsx  page.tsx
app/settings/appearance/: page.tsx
app/settings/display/: page.tsx
app/settings/notifications/: page.tsx
components/editor/: location_switcher.tsx
components/editor/dialog/: add_new_key.tsx  edit.tsx
components/editor/translation_table/: column_toggle.tsx  columns.tsx  pagination.tsx  table.tsx
components/locations/: add_new.tsx  location_card.tsx  location_list.tsx
components/miscelaneous/: pulse.tsx
components/nav/: main_nav.tsx  nav_test.tsx
components/settings/: appearance_form.tsx
components/settings/appearance/: appearance_form.tsx
components/settings/notifications/: notifications_form.tsx
components/settings/translations/: language_dropdown.tsx  translations_form.tsx
components/statistics/: key_statistics_card.tsx  monthly_location_change_card.tsx
components/theme/: theme_provider.tsx
components/ui/: resizable.tsx
crates/db/: Cargo.toml
crates/db/prisma/: dev.db  dev.db-journal  schema.prisma
crates/db/src/: context.rs  lib.rs  prisma.rs
crates/local_storage/: Cargo.toml
crates/local_storage/src/: handler.rs  helper.rs  types.rs
crates/local_storage/src/stores/: location_store.rs  settings_store.rs  translation_store.rs
crates/migrator/: Cargo.toml
crates/prisma-cli/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  query_root.rs  state.rs
crates/server/src/entities/: application_data.rs  location.rs  mod.rs  prelude.rs
crates/server/src/handlers/: location_handler.rs  mod.rs  storage_handler.rs  translation_handler.rs
crates/server/src/handlers/location_handler/: add.rs  delete.rs  mod.rs  rescan.rs  types.rs
crates/server/src/handlers/translation_handler/: frontend.rs  mod.rs
crates/server/src/migrator/: m20240321_121129_create_location_table.rs  m20240327_150619_application_data.rs  mod.rs
crates/server/src/own_middleware/: logger.rs
crates/test/: Cargo.toml  README.md
crates/test/src/: lib.rs
crates/test/src/local_storage/: handler_tests.rs  mod.rs
crates/test/src/translation_handler/: mod.rs
crates/test/src/translation_handler/backend/: mod.rs
crates/test/src/translation_handler/backend/xml/: mod.rs  reader_tests.rs
crates/test/src/translation_handler/frontend/: getter_tests.rs  mod.rs  remover_tests.rs
crates/test/tests/local_storage/: integration_test.rs
crates/test/tests/translation_handler/: integration_test.rs
crates/translation_handler/: Cargo.toml
crates/translation_handler/src/: getter.rs  lib.rs  main.rs  remover.rs  setter.rs  updater.rs
crates/translation_handler/src/backend/: getter.rs  mod.rs  remover.rs  setter.rs  updater.rs  xml_reader.rs
crates/translation_handler/src/backend/xml/: mod.rs  reader.rs  remover.rs  updater.rs  writer.rs
crates/translation_handler/src/frontend/: getter.rs  mod.rs  remover.rs  setter.rs  updater.rs
lib/: HeroStore.ts  bindings.ts  stores.ts
lib/stores/: local_storage_handler.ts  location_store.ts  settings_store.ts  statistics_store.ts  translation_store.ts
local_storage/src/: handler.rs  helper.rs  lib.rs
local_storage/src/stores/: location_store.rs  settings_store.rs  translation_store.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/handlers/: mod.rs  storage_handler.rs  translation_handler.rs
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: local_storage.rs  main.rs
src-tauri/src/local_storage/: handler.rs  helper.rs  mod.rs  types.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: mod.rs  storage_handler.rs  test.rs  translation_handler.rs
src-tauri/src/stores/: location_store.rs  mod.rs  settings_store.rs  translation_store.rs
src-tauri/src/translation_handler/: getter.rs  mod.rs  setter.rs
src/components/editor/: location_switcher.tsx
src/components/locations/: add_new.tsx  location_card.tsx  location_list.tsx  no_locations.tsx
src/components/nav/: main_nav.tsx
src/components/settings/: top_nav.tsx
src/components/statistics/: key_statistics_card.tsx  monthly_location_change_card.tsx
src/components/theme/: theme_provider.tsx
src/components/translation-manager/: translation-manager.tsx
src/components/ui/: sonner.tsx
src/lib/: procedures.ts  rspc.ts
src/lib/hooks/: useSize.ts
src/lib/stores/: location_store.ts  rspc_handler.ts  settings_store.ts  translation_store.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
src/routes/editor/: index.tsx
src/routes/locations/: index.tsx
src/routes/settings/: appearance.tsx  index.tsx  notifications.tsx
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/src/: main.rs
translation_handler/: Cargo.toml
translation_handler/src/: getter.rs  setter.rs
ui/: .eslintrc.json  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
ui/app/: layout.tsx  page.tsx
ui/app/application/: layout.tsx  page.tsx
ui/app/editor/: page.tsx
ui/app/home/: page.tsx
ui/app/locations/: page.tsx
ui/components/editor/: location_switcher.tsx
ui/components/locations/: add_new.tsx  location_card.tsx
ui/components/nav/: main_nav.tsx
ui/components/statistics/: monthly_location_change_card.tsx
ui/components/ui/: button.tsx  resizable.tsx
ui/lib/: bindings.ts  procedures.ts  rspc.ts
ui/lib/hooks/: useSize.ts
ui/lib/stores/: location_store.ts  rspc_handler.ts  settings_store.ts  translation_store.ts
ui/src/: app.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: database.rs  main.rs
(+23 files in other folders)
