[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [ "path-all", "os-all", "updater", "window-all", "dialog-all", "notification-all"] }
specta = "2.0.0-rc.7"
tauri-specta = { version = "2.0.0-rc.4", features = ["javascript", "typescript"] }
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.2"
socketioxide = "0.9.0"
glob = "0.3.1"
regex = "1.10.2"
tower-http = { version = "0.5.0", features = ["cors"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
