[package]
name = "server"
version = "0.1.0"
authors = ["you"]
license = ""
repository = ""
edition = "2021"


[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
local_storage = { path = "../local_storage" }
translation_handler = { path = "../translation_handler" }
tauri = { workspace = true }
rspc = { workspace = true }
db = { path = "../db" }
specta = { workspace = true }
futures = "0.3.30"
prisma-client-rust = { workspace = true }
async-stream = { workspace = true }
