[package]
name = "translation_handler"
version = "0.1.0"
authors = ["you"]
license = ""
repository = ""
edition = "2021"


[dependencies]
glob = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
local_storage = { path = "../local_storage" }
serde = { workspace = true }
tokio = { workspace = true }
rspc = { workspace = true }
specta = { workspace = true }
db = { path = "../db" }
quick-xml = { workspace = true }
tracing-subscriber = { workspace = true }
