[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
local_storage = { path = "../../crates/local_storage" }
server = { path = "../../crates/server" }
translation_handler = { path = "../../crates/translation_handler" }
tokio = { workspace = true }
rspc = { workspace = true }
rspc-tauri = { workspace = true }
db = {path = "../../crates/db"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
